--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -10,11 +10,58 @@
   grid-template-rows: 20px 1fr 20px;
   align-items: center;
   justify-items: center;
-  min-height: 100svh;
+  /* min-height: 100svh; */
   padding: 80px;
   gap: 64px;
   font-family: var(--font-geist-sans);
 }
+
+.modalBackdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.modalContent {
+  background: white;
+  padding: 30px 70px 15px 70px;
+  border-radius: 8px;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  color: black;
+}
+
+.closeButton {
+  padding: 20px 16px;
+  background: #84848f;
+  color: white;
+  border: none;
+  cursor: pointer;
+  width: 137px;
+  height: 56px;
+  border-radius: 5px;
+}
+.activeButton {
+  padding: 20px 16px;
+  background: linear-gradient(to right, #1c68ff, #053cf0);
+  color: white;
+  border: none;
+  cursor: pointer;
+  width: 137px;
+  height: 56px;
+  border-radius: 5px;
+}
+
+.closeButton:hover {
+  background: #0056b3;
+}
+
 
 @media (prefers-color-scheme: dark) {
   .page {
@@ -168,3 +215,4 @@ a.secondary {
     filter: invert();
   }
 }
+
