--- a/src/app/css/modal.module.css
+++ b/src/app/css/modal.module.css
@@ -8,6 +8,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: 3;
 }
 
 .modaltotal {
@@ -18,7 +19,7 @@
 }
 
 .modaltitle {
-    width: 800px;
+    width: 100%;
     height: 60px;
     display: flex;
     justify-content: space-between;
@@ -93,14 +94,14 @@
     font-weight: 500;
 }
 
-.contentinner{
+.contentinner {
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.contentlist{
+.contentlist {
     width: 740px;
     height: 60px;
     margin-left: 30px;
@@ -109,4 +110,333 @@
     font-size: 14px;
     color: #000;
     font-weight: 500;
+}
+
+.userpostbox {
+    width: 800px;
+    height: 100vh;
+    border-radius: 10px;
+    background-color: #fff;
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+
+.contentox {
+    width: 700px;
+    height: 260px;
+    margin: 0px 30px;
+    border-bottom: 1px solid #ebecf1;
+    font-size: 25px;
+    font-weight: bold;
+
+    color: #000;
+}
+
+.contentetc {
+    width: 700px;
+    height: auto;
+    margin: 0px 30px;
+    font-size: 14px;
+    font-weight: normal;
+    color: #000;
+}
+
+.conti {
+    display: flex;
+    flex-direction: row;
+    margin-top: 20px;
+    height: 50px;
+}
+
+.contititle {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    width: 120px;
+    height: 50px;
+}
+
+.postworktotal {
+    width: 1030px;
+    height: 643px;
+    border-radius: 10px;
+    background-color: #fff;
+}
+
+.postcontentbox {
+    width: 970px;
+    height: 430px;
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+.postcontentbox::-webkit-scrollbar {
+    display: none;
+}
+
+/* Firefox에서 스크롤 숨기기 */
+.postcontentbox {
+    scrollbar-width: none;
+}
+
+.worktitle {
+    font-size: 14px;
+    font-weight: 500;
+    color: #000;
+    height: 50px;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+}
+
+.woti {
+    width: 120px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.wola {
+    width: 373px;
+    height: 50px;
+    padding: 18px 310px 16px 15px;
+    border-radius: 5px;
+    border: solid 1px #707070;
+    background-color: #fff;
+    font-size: 14px;
+    font-weight: 500;
+}
+
+.woch {
+    width: 373px;
+    height: 50px;
+    border-radius: 5px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #f5f6f9;
+    color: #bcbdc4;
+    font-size: 14px;
+    font-weight: 500;
+}
+
+.wochcontent {
+    font-size: 14px;
+    font-weight: 500;
+    color: #000;
+    height: 80px;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+}
+
+.wochcontent_co {
+    width: 850px;
+    height: 80px;
+    padding: 16px 20px;
+    border-radius: 5px;
+    background-color: #f5f6f9;
+}
+
+.chph {
+    width: 76px;
+    height: 34px;
+    border-radius: 5px;
+    border: solid 1px #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 15px;
+    font-weight: 500;
+    color: #fff;
+}
+
+.nebt {
+    width: 1030px;
+    height: 116px;
+    margin: 50px 0 0;
+    box-shadow: 0 -3px 10px 0 rgba(0, 0, 0, 0.1);
+    background-color: #fff;
+    border-radius: 8px;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.btso {
+    width: 100px;
+    height: 56px;
+    border-radius: 5px;
+    background-color: #000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 15px;
+    font-weight: 600;
+    color: #fff;
+    border: none;
+}
+
+.tooltipBox {
+    z-index: 2;
+    background-color: white;
+    border: solid 1px #ebecf1;
+    border-radius: 5px;
+}
+
+.postcontentboxse {
+    width: 100%;
+    height: 470px;
+    background: #f5f6f9;
+    display: flex;
+    justify-content: center;
+    overflow-y: scroll;
+    overflow-x: auto;
+}
+
+.photoinner {
+    width: 780px;
+    height: 100%;
+    background-color: #fff;
+
+}
+
+/* 스크롤바 전체 영역 */
+.postcontentboxse::-webkit-scrollbar {
+    width: 10px;
+    /* 세로 스크롤 너비 */
+    height: 10px;
+    /* 가로 스크롤 높이 */
+}
+
+/* 스크롤바 트랙 (배경) */
+.postcontentboxse::-webkit-scrollbar-track {
+    background: #f1f1f1;
+    /* 연한 회색 */
+    border-radius: 10px;
+}
+
+/* 스크롤바 핸들 */
+.postcontentboxse::-webkit-scrollbar-thumb {
+    background: #888;
+    /* 중간 회색 */
+    border-radius: 10px;
+}
+
+/* 스크롤바 핸들에 마우스를 올렸을 때 */
+.postcontentboxse::-webkit-scrollbar-thumb:hover {
+    background: #555;
+    /* 어두운 회색 */
+}
+
+
+.photoinner {
+    width: 780px;
+    height: 100%;
+    background-color: #fff;
+}
+
+.phototop {
+    width: 100%;
+    height: 70px;
+    border-bottom: 1px solid #ebecf1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    font-size: 10px;
+    font-weight: 500;
+    color: #84848f;
+}
+
+.qubox {
+    width: 100%;
+    height: auto;
+    padding-bottom: 30px;
+}
+
+
+.wochqu {
+    width: 196px;
+    height: 50px;
+    border-radius: 5px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #f5f6f9;
+    color: #bcbdc4;
+    font-size: 14px;
+    font-weight: 500;
+}
+
+.addcon {
+    width: 109px;
+    height: 28px;
+    color: #1c68ff;
+    border-radius: 5px;
+    border: solid 1px #1c68ff;
+    font-size: 12px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 30px;
+    margin-top: 20px;
+}
+
+.quinbox {
+    width: 860px;
+    height: 50px;
+    margin-top: 15px;
+    background-color: white;
+    border: solid 1px #707070;
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+}
+
+.quinput {
+    background-color: white;
+    border: none;
+    width: calc(100% - 100px);
+    height: 100%;
+    border-radius: 5px;
+    outline: none;
+    color: black;
+}
+
+.anbox {
+    width: 85px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 15px;
+}
+
+.aninner {
+    width: 85px;
+    height: 29px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: solid 1px #ebecf1;
+    background-color: #fff;
+    font-size: 12px;
+    color: #000;
+    border-radius: 5px;
+}
+.adddn{
+    width: 200px;
+    height: 46px;
+    margin-top: 30px;
+    margin-left: 30px;
+    border-radius: 5px;
+    border: solid 1px #84848f;   
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 15px;
+    font-weight: 600;
+    color: #191919;
 }
