--- a/src/app/css/user_detail.module.css
+++ b/src/app/css/user_detail.module.css
@@ -203,6 +203,27 @@
 }
 
 
+.modalBackdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 3;
+}
+.acceptbox{
+    width: 375px;
+  height: 419px;
+  padding: 15px ;
+  border-radius: 10px;
+  box-shadow: 0 -3px 15px 0 rgba(0, 0, 0, 0.1);
+  background-color: #fff;
+}
+
 @media screen and (max-width: 414px) {
     .innerbox {
         width: 100%;
