--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -63,6 +63,46 @@
   background: #0056b3;
 }
 
+.webmo{
+  width: 315px;
+  height: 253px;
+  border-radius: 10px;
+  background-color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.webtiotle{
+  font-size: 18px;
+  font-weight: bold;
+  color: #000;
+  margin-top: 15px;
+}
+.webtiotlesub{
+  font-size: 14px;
+  font-weight: 500;
+  text-align: center;
+  color: #84848f;
+  margin-top: 10px;
+}
+.footerboxsds{
+  width: 280px;
+  height: 56px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 30px;
+}
+.footerboxfirst{
+  width: 135px;
+  height: 56px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px;
+}
+
 
 @media (prefers-color-scheme: dark) {
   .page {
