--- a/src/app/css/user_detail.module.css
+++ b/src/app/css/user_detail.module.css
@@ -23,7 +23,7 @@
     height: auto;
     padding: 0px 15px;
     display: flex;
-    align-items: flex-start;
+    align-items: center;
     justify-content: center;
     flex-direction: column;
 }
@@ -157,8 +157,8 @@
 .quinput {
     background-color: white;
     border: none;
-    width: 100%;
-    height: 50ㅔㅌ;
+    /* width: 100%;
+    height: 50ㅔㅌ; */
     border-radius: 5px;
     outline: none;
     color: black;
@@ -194,6 +194,7 @@
     margin-top: 20px;
     border-radius: 5px;
     background-color: #f5f6f9;
+    overflow-y: auto;
 }
 
 .endcontenttitle {
@@ -229,7 +230,7 @@
 .crminner{
     display: flex;
     justify-content: flex-start;
-    align-items: flex-start;
+    align-items: center;
     padding: 15px;
     width: 100%;
     height: auto;
