--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -90,7 +90,7 @@
   width: 280px;
   height: 56px;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   margin-top: 30px;
 }
