--- a/src/app/css/user_detail.module.css
+++ b/src/app/css/user_detail.module.css
@@ -348,15 +348,15 @@
     }
 
     .dfjskd {
-        width: 100vw;
+        width: 100%;
     }
 
     .quinput {
-        width: 90vw;
+        width: 300px;
     }
 
     .endcontentbox {
-        width: 90vw;
+        width: 90%;
        
     }
     .acceptbox {
