--- a/src/app/css/user_detail.module.css
+++ b/src/app/css/user_detail.module.css
@@ -11,7 +11,7 @@
 .headerbox {
     width: 375px;
     height: 60px;
-    padding: 0px 15px;
+    padding: 0px 20px;
     border-bottom: 1px solid #ebecf1;
     display: flex;
     align-items: center;
@@ -22,7 +22,7 @@
 .contentsbox {
     width: 100%;
     height: auto;
-    padding: 0px 15px;
+    padding: 0px 20px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -50,17 +50,16 @@
 .title {
     font-size: 22px;
     font-weight: bold;
-    margin-top: 20px;
+    margin-top: 40px;
     color: #000;
 }
 
 .post {
-    margin-top: 20px;
-    height: 200px;
+    height: 170px;
     width: 345px;
-    display: flex;
+    /* display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center; */
     position: relative;
     flex-direction: column;
     /* .nextstep이 절대 위치로 겹칠 수 있도록 설정 */
@@ -68,11 +67,12 @@
 }
 
 .postimg {
-    width: 345px;
-    height: 200px;
+    /* width: 345px;
+    height: 200px; */
     display: block;
     /* 하단 여백 방지 */
-    border-radius: 10px 10px;
+    /* border-radius: 10px 10px; */
+    margin-top: 15px;
     /* 위쪽 모서리만 둥글게 */
 }
 
@@ -80,18 +80,19 @@
     position: absolute;
     /* 이미지 위에 겹치도록 설정 */
     bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
+    /* left: 50%;
+    transform: translateX(-50%); */
     /* 중앙 정렬 */
-    width: 345px;
-    height: 56px;
-    border-radius: 0 0 10px 10px;
-    background-image: linear-gradient(to bottom, #1c68ff, #053cf0);
+    width: 335px;
+    height: 50px;
+    border-radius: 0 0 20px 20px;
+    background: #008CFF;
+    /* background-image: linear-gradient(to bottom, #1c68ff, #053cf0); */
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 15px;
-    font-weight: 600;
+    font-size: 18px;
+    font-weight: bold;
     color: #fff;
 }
 
