--- a/src/app/css/user_detail.module.css
+++ b/src/app/css/user_detail.module.css
@@ -16,7 +16,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    z-index: 10;
+    z-index: 3;
     position: fixed;
     background: white;
     top: 0px;
@@ -42,6 +42,7 @@
     background-color: #fff;
     display: flex;
     flex-direction: row;
+    margin-top: 85px;
 }
 
 .logo {
