--- a/src/app/css/user_detail.module.css
+++ b/src/app/css/user_detail.module.css
@@ -9,7 +9,7 @@
 }
 
 .headerbox {
-    width: 375px;
+    width: 100%;
     height: 60px;
     padding: 0px 20px;
     border-bottom: 1px solid #ebecf1;
